--- a/index.html
+++ b/index.html
@@ -141,6 +141,35 @@
             box-shadow: 0 6px 20px rgba(255,255,255,0.4);
             background: linear-gradient(135deg, #ffffff 0%, #e0e0e0 100%);
         }
+        .resume-btn-container {
+    display: flex;
+    justify-content: center; /* horizontally center */
+    align-items: center;     /* vertically center if div has height */
+    margin-top: 2rem;        /* spacing from top */
+}
+
+     .btn2 {
+    display: inline-flex;  /* makes align-items and justify-content work */
+    padding: 12px 30px;
+    background: linear-gradient(135deg, #fff 0%, #f0f0f0 100%);
+    color: #667eea;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: transform 0.3s, box-shadow 0.3s;
+    animation: fadeInUp 1s 0.4s backwards;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+}
+
+
+
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(255,255,255,0.4);
+            background: linear-gradient(135deg, #ffffff 0%, #e0e0e0 100%);
+        }
 
         /* Sections */
         section {
@@ -399,6 +428,9 @@
             transform: translateY(-5px);
             filter: drop-shadow(0 5px 10px rgba(102, 126, 234, 0.5));
         }
+        .img download{
+            margin-left: 200px;
+        }
 
         /* Footer */
         footer {
@@ -610,6 +642,11 @@
                 <!-- <a href="#" target="_blank" title="Twitter">🐦</a> -->
             </div>
         </div>
+          <div class="resume-btn-container">
+    <!-- Resume Download Button -->
+    <a href="resume.pdf" class="btn2">Download Resume</a>
+</div>
+
     </section>
 
     <!-- Footer -->
