--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                         <span class="tag">MongoDB</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank">Live Demo</a>
+                        <a href="https://moonlit-longma-ee84d4.netlify.app/" target="_blank">Live Demo</a>
                         <a href="https://github.com/Ragav8373/Organic_Shop.git" target="_blank">GitHub</a>
                     </div>
                 </div>
